qdev: move reset handler list from vl.c to hw/reset.c
The core qdev code uses the reset handler list from vl.c, and
currently *-user has some hacks to make CPU reset work.

This moves qemu_register_reset(), qemu_unregister_reset() and
qemu_devices_reset() to a new file, hw/reset.c, that can be used by qdev
and by *-user.

Signed-off-by: Eduardo Habkost <ehabkost@redhat.com>

--- a/hw/Makefile.objs
+++ b/hw/Makefile.objs
@@ -1,5 +1,6 @@
 common-obj-y = usb/ ide/
 common-obj-y += loader.o
+common-obj-y += reset.o
 common-obj-$(CONFIG_VIRTIO) += virtio-console.o
 common-obj-$(CONFIG_VIRTIO) += virtio-rng.o
 common-obj-$(CONFIG_VIRTIO_PCI) += virtio-pci.o
